fix: enforce Apache distribution notices